// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountRequestTableComponent should display account requests with no reset or expand links button 1`] = `
<tm-account-request-table
  accountRequests={[Function Array]}
  accountService={[Function AccountService]}
  searchString=""
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Pending Account Requests
      </strong>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped data-table"
        id="search-table-account-request"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Email
            </th>
            <th>
              Status
            </th>
            <th>
              Institute, Country
            </th>
            <th>
              Created At
            </th>
            <th>
              Comments
            </th>
            <th>
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              REGISTERED
            </td>
            <td>
              institute
            </td>
            <td
              id="timestamp-box"
            >
              createdTime
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <div
                  class="ngb-tooltip-class"
                >
                  <a
                    href="javascript:;"
                    id="delete-account-request-0"
                  >
                    <i
                      class="fa-solid fa-trash"
                    />
                  </a>
                </div>
                <div>
                  <a
                    href="javascript:;"
                    id="view-account-request-0"
                  >
                    <i
                      class="fa-solid fa-eye"
                    />
                  </a>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              REGISTERED
            </td>
            <td>
              institute
            </td>
            <td
              id="timestamp-box"
            >
              createdTime
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <div
                  class="ngb-tooltip-class"
                >
                  <a
                    href="javascript:;"
                    id="delete-account-request-1"
                  >
                    <i
                      class="fa-solid fa-trash"
                    />
                  </a>
                </div>
                <div>
                  <a
                    href="javascript:;"
                    id="view-account-request-1"
                  >
                    <i
                      class="fa-solid fa-eye"
                    />
                  </a>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-account-request-table>
`;

exports[`AccountRequestTableComponent should display account requests with reset button and expandable links buttons 1`] = `
<tm-account-request-table
  accountRequests={[Function Array]}
  accountService={[Function AccountService]}
  searchString={[Function String]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <div>
        <strong>
          Account Requests Found
        </strong>
      </div>
      <div
        class="card-header-btn-toolbar"
      >
        <button
          class="btn btn-light btn-sm"
          id="show-account-request-links"
          style="margin-right: 10px;"
          type="button"
        >
          Expand All
        </button>
        <button
          class="btn btn-light btn-sm"
          id="hide-account-request-links"
          type="button"
        >
          Collapse All
        </button>
      </div>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped data-table"
        id="search-table-account-request"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Email
            </th>
            <th>
              Status
            </th>
            <th>
              Institute, Country
            </th>
            <th>
              Created At
            </th>
            <th>
              Registered At
            </th>
            <th>
              Comments
            </th>
            <th>
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              REGISTERED
            </td>
            <td>
              institute
            </td>
            <td
              id="timestamp-box"
            >
              createdTime
            </td>
            <td
              id="timestamp-box"
            >
              registeredTime
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <div
                  class="ngb-tooltip-class"
                >
                  <a
                    href="javascript:;"
                    id="delete-account-request-0"
                  >
                    <i
                      class="fa-solid fa-trash"
                    />
                  </a>
                </div>
                <div>
                  <a
                    href="javascript:;"
                    id="view-account-request-0"
                  >
                    <i
                      class="fa-solid fa-eye"
                    />
                  </a>
                </div>
                <div
                  class="ngb-tooltip-class"
                >
                  <button
                    class="btn btn-primary"
                    id="reset-account-request-0"
                  >
                    Reset
                  </button>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              REGISTERED
            </td>
            <td>
              institute
            </td>
            <td
              id="timestamp-box"
            >
              createdTime
            </td>
            <td
              id="timestamp-box"
            >
              registeredTime
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <div
                  class="ngb-tooltip-class"
                >
                  <a
                    href="javascript:;"
                    id="delete-account-request-1"
                  >
                    <i
                      class="fa-solid fa-trash"
                    />
                  </a>
                </div>
                <div>
                  <a
                    href="javascript:;"
                    id="view-account-request-1"
                  >
                    <i
                      class="fa-solid fa-eye"
                    />
                  </a>
                </div>
                <div
                  class="ngb-tooltip-class"
                >
                  <button
                    class="btn btn-primary"
                    id="reset-account-request-1"
                  >
                    Reset
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-account-request-table>
`;

exports[`AccountRequestTableComponent should snap with an expanded account requests table 1`] = `
<tm-account-request-table
  accountRequests={[Function Array]}
  accountService={[Function AccountService]}
  searchString=""
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Pending Account Requests
      </strong>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped data-table"
        id="search-table-account-request"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Email
            </th>
            <th>
              Status
            </th>
            <th>
              Institute, Country
            </th>
            <th>
              Created At
            </th>
            <th>
              Comments
            </th>
            <th>
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              REGISTERED
            </td>
            <td>
              institute
            </td>
            <td
              id="timestamp-box"
            >
              createdTime
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <div
                  class="ngb-tooltip-class"
                >
                  <a
                    href="javascript:;"
                    id="delete-account-request-0"
                  >
                    <i
                      class="fa-solid fa-trash"
                    />
                  </a>
                </div>
                <div>
                  <a
                    href="javascript:;"
                    id="view-account-request-0"
                  >
                    <i
                      class="fa-solid fa-eye"
                    />
                  </a>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-account-request-table>
`;
